compiler/tests/fixtures/type_err/unknown_identifier.vibe
pub sum(values: List<Int>) -> Int {
  acc := 0
  acc = acc + missing
  acc
}
